force-app/main/default/objects/Business_Default__c/Business_Default__c.object-meta.xml
<CustomObject>
    <label>Business Default</label>
    <nameField>
        <label>Business Default</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Defaults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>