force-app/main/default/objects/Business_Default__c/fields/AdvancePayment__c.field-meta.xml
<CustomField>
    <fullName>AdvancePayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AdvancePayment</label>
    <type>Checkbox</type>
</CustomField>