force-app/main/default/objects/Business_Default__c/fields/Business_Name_FI__c.field-meta.xml
<CustomField>
    <fullName>Business_Name_FI__c</fullName>
    <label>Business Name FI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>