force-app/main/default/objects/Business_Default__c/fields/Condominium__c.field-meta.xml
<CustomField>
    <fullName>Condominium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Condominium</label>
    <type>Checkbox</type>
</CustomField>