force-app/main/default/objects/Business_Default__c/fields/District_FI__c.field-meta.xml
<CustomField>
    <fullName>District_FI__c</fullName>
    <label>District FI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>