force-app/main/default/objects/Business_Default__c/fields/Expiration_Time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Time__c</fullName>
    <label>Expiration Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>