force-app/main/default/objects/Business_Default__c/fields/Household_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Household_Deduction__c</fullName>
    <label>Household Deduction</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>