force-app/main/default/objects/Business_Default__c/fields/IncludeBlinds__c.field-meta.xml
<CustomField>
    <fullName>IncludeBlinds__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncludeBlinds</label>
    <type>Checkbox</type>
</CustomField>