force-app/main/default/objects/Business_Default__c/fields/Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount__c</fullName>
    <label>Max Discount</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>