force-app/main/default/objects/Business_Default__c/fields/Organization_Code__c.field-meta.xml
<CustomField>
    <fullName>Organization_Code__c</fullName>
    <label>Organization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>