force-app/main/default/objects/Business_Default__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <label>Organization Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>