force-app/main/default/objects/Business_Default__c/fields/Warehouse_Id__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Id__c</fullName>
    <label>Warehouse Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>