force-app/main/default/objects/Business_Default__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organization_Id__c</columns>
    <columns>Organization_Name__c</columns>
    <columns>Organization_Code__c</columns>
    <columns>District_Id__c</columns>
    <columns>District_FI__c</columns>
    <columns>District_Name__c</columns>
    <columns>District_Code__c</columns>
    <columns>Business_Id__c</columns>
    <columns>Business_Name_FI__c</columns>
    <columns>Business_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>